@@ -23,6 +23,7 @@ Now
   - Optimize %0 as returning LIST.
   - Optimize IF with TRUE branch equal to FALSE branch.
   - Add configurable MUTATUION-RATE-PERCENT parameter.
+  - Optimize only on load or on new elite individual.
 
 Version 0.0.5 2012-09-05
  - Support for C++0x (GCC 4.5.3)
